Добавил докер, глобальный перехватчик ошибок у бека и страницу админа